Fix syntax of day 1 exercises

--- a/exercises/day1.qmd
+++ b/exercises/day1.qmd
@@ -1,7 +1,7 @@
-???
+---
 title: "Lab exercise: day 1"
 editor: visual
-???
+---
 
 # Learn
 
@@ -15,7 +15,6 @@ library(lubridate)
 tourism <- read_csv("data/tourism.csv") |> 
   ???(Quarter = ???(Quarter)) |> 
   as_tsibble(index = ???, key = c(???))
-  
 ```
 
 Create an **annual** time series of the `Purpose` of travel for visitors to Australia (summing over `State` and `Region`).
@@ -94,11 +93,7 @@ vaccine_administrated
 
 After importing your data, it's important to double-check the structure of the data and the data types of the variables. The structure of the data you import into R must be a tibble/data frame.
 
-::: callout-note
-## Question
-
 Verify the data type of each variable in `vaccine_administered`. We may need to modify the data type of `month`, `strike`, `flooding_events`. Could you explain why?
-:::
 
 ```{r}
 library(lubridate)
@@ -118,35 +113,22 @@ It's essential to always check for any missing values and address them before cr
 anyNA(vaccine_administrated)
 ```
 
-::: callout-caution
-The dataet you use may contain missing values (`NA` in R) and other data quality issues. While checking and fixing data quality issues are crucial for any project, addressing such issues goes beyond the scope of this training. For further information, you may refer to additional resources \[Link\].
-:::
+The dataset you use may contain missing values (`NA` in R) and other data quality issues. While checking and fixing data quality issues are crucial for any project, addressing such issues goes beyond the scope of this training. For further information, you may refer to additional resources \[Link\].
 
 ### Check duplications and fix it
 
-::: callout-important
 Before you move forward, it's important to consistently examine your data for any duplicated observations. If such duplications are identified, address them before moving forward.
-:::
 
-Write a r code to check for duplicate observations in the data.
+Write R code to check for duplicate observations in the data.
 
 ```{r}
 
 ```
 
-::: callout-note
-## Question
-
 Have you identified any duplicate observations?
-:::
-
 If your data contains no duplicates, you may proceed with creating a tsibble. Otherwise, you need to fix it.
 
-::: callout-note
-## Question
-
 How do you fix duplicated observations?
-:::
 
 ### Create tsibble
 
@@ -172,15 +154,9 @@ Complete the following R chunk to check if there is any temporal gap in the data
 ##???(vaccine_administrated_tsb)# count gaps
 ```
 
-::: callout-note
-## Question
+### Are there any temporal gaps in the data?
 
-Is there any temporal gap in the data?
-:::
-
-::: callout-tip
-At times, you may come across a dataset with temporal gaps, signifying intervals where no records exist in the temporal data. Prior to do any analysis, it's important to identify and fill those gaps. You can use the below R code if such temporal gaps are present in the dataset.
-:::
+> At times, you may come across a dataset with temporal gaps, signifying intervals where no records exist in the temporal data. Prior to do any analysis, it's important to identify and fill those gaps. You can use the below R code if such temporal gaps are present in the dataset.
 
 ```{r}
 #If there is any gap, then fill it using fill_gaps.
@@ -191,9 +167,7 @@ At times, you may come across a dataset with temporal gaps, signifying intervals
 
 Depending on the decision your forecast will inform, you may need to manipulate your tsibble. For instance, if you're forecasting the total dose administered in the country, or if you need to forecast quarterly doses administered for each region or for the entire country, you need to manipulate your time series frist.
 
-::: callout-tip
-Remember, you can use `index_by()`, `group_by()` or `group_by_key()`, and `summarise()` to create different temporal granularity.
-:::
+> Remember, you can use `index_by()`, `group_by()` or `group_by_key()`, and `summarise()` to create different temporal granularity.
 
 Complete the following code to create total dose administrated in the country.
 
@@ -240,11 +214,7 @@ vaccine_administrated_tsb |>
   ???(???)
 ```
 
-::: callout-note
-### Question
-
 Do you observe any systematic pattern in time series plots?
-:::
 
 ### Seasonal plots
 
@@ -263,11 +233,7 @@ vaccine_administrated_tsb |>
   ???(???)
 ```
 
-::: callout-note
-### Question
-
 Do you observe any consistent pattern? How different the pattern is across region?
-:::
 
 ### Seasonal subseries plot
 
@@ -279,11 +245,7 @@ vaccine_administrated_tsb |>
   ???(???)
 ```
 
-::: callout-note
-### Question
-
 Do you see any pattern that has not been obvious with time plot and seasonal plot?
-:::
 
 ### ACF plots
 
@@ -304,8 +266,4 @@ vaccine_administrated_tsb |>
   autoplot()
 ```
 
-::: callout-note
-### Question
-
 What can you say about the correlation between dose administrated with its lags?
-:::
