--- a/materials/00_intro.qmd
+++ b/materials/00_intro.qmd
@@ -12,7 +12,7 @@ source("setup.R")
 
 ## Instructors
 
-\placefig{0.6}{1.5}{width=3.5cm}{Rob}
+\placefig{0.6}{1.5}{width=3.5cm}{Bahman}
 \begin{textblock}{8.2}(5.6,1.3)
 \begin{alertblock}{Bahman Rostami-Tabar}
 \href{https://www.bahmanrt.com/}{\faIcon{home} bahmanrt.com}\\
