--- a/materials/05_accuracy_basic.qmd
+++ b/materials/05_accuracy_basic.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Time Series Analysis & Forecasting Using R"
-subtitle: "6. Introduction to forecasting"
+title: "Africast-Time Series Analysis & Forecasting Using R"
+subtitle: "9. Basic training and test accuracy"
 ---
 
 ## Outline
@@ -23,21 +23,21 @@ melsyd <- tsibbledata::ansett |>
 
 # Forecast accuracy measures
 
-## Evaluating the accuracy
+## Evaluate forecast accuracy
 
-* In order to evaluate a forecasting model, we calculate its forecast  accuracy.
+* In order to evaluate the performance of a forecasting model, we compute its forecast  accuracy.
 * Forecast accuracy is compared by measuring errors based on the test set.
 * Ideally it should allow comparing benefits from improved accuracy with the cost of obtaining the improvement.
 
-## Evaluating the accuracy
+## Evaluate forecast accuracy
 
-* We should be choosing forecast models to lead to the maximum benefits on the bottom line.
-    - least staffing costs, least inventory, fastest response, least change in planing,  for example.
+* We should be choosing forecast models that lead to better business decisions
+    - least staffing costs, least emission, highest service level, least stock-out, least inventory, fastest response, least change in planing,  for example.
 * However, this is not always easy to obtain, therefore we might simply use methods that provide the most accurate forecast.
 
 ## Evaluate forecast accuracy
 
-* Residual diagnostic is not a reliable indication of forecast accuracy
+* Fitting and its residual are not a reliable indication of forecast accuracy
 * A model which fits the training data well will not necessarily forecast well
 * A perfect fit can always be obtained by using a model with enough parameters
 * Over-fitting a model to data is just as bad as failing to identify a systematic pattern in the data
@@ -45,9 +45,9 @@ melsyd <- tsibbledata::ansett |>
 ## Forecast accuracy evaluation using test sets
 
 * We mimic the real life situation
-* We pretend we don't know some part of data(new data)
+* We pretend we don't know some part of data (new data)
 * It must not be used for *any* aspect of model training
-* Forecast accuracy is based only on the test set
+* Forecast accuracy is computed only based on the test set
 
 ## Training and test sets
 
@@ -64,7 +64,7 @@ text(10, 1, "Training data", col = "blue")
 text(21, 1, "Test data", col = "red")
 ```
 
-## Point forecast accuracy
+## Evaluating point forecast accuracy
 
 ### Forecast errors
 
@@ -132,7 +132,7 @@ $e_{T+h} =$  & $y_{T+h} - \pred{y}{T+h}{T}$
   * MAE, MSE, RMSE are all scale dependent.
   * MAPE is scale independent but is only sensible if $y_t\gg 0$ for all $t$, and $y$ has a natural zero.
 
-## Measures of forecast accuracy
+### Measures of forecast accuracy
 \fontsize{13}{15}\sf
 
 \begin{block}{Mean Absolute Scaled Error}
@@ -181,8 +181,10 @@ beer_fc <- forecast(beer_fit, h = "3 years")
 accuracy(beer_fc, aus_production)
 ```
 
-### Prediction interval accuracy
-## Winkler score
+
+## Evaluating distributional forecast accuracy
+## Prediction interval accuracy
+### Prediction interval accuracy using winkler score
 
 Winkler proposed a scoring method to enable comparisons between prediction intervals:
 
@@ -199,7 +201,7 @@ Winkler proposed a scoring method to enable comparisons between prediction inter
 \end{align*}
 \end{block}
 
-## Prediction interval accuracy
+### Prediction interval accuracy
 
 \fontsize{11}{12}\sf
 ```{r winker-accuracy, options}
@@ -213,4 +215,27 @@ Winkler proposed a scoring method to enable comparisons between prediction inter
   gt::as_latex()
 ```
 
-## Probabilistic forecast accuracy
+
+### Quantile score
+
+\begin{block}{Winkler score}
+Q_{p,t} = \begin{cases}
+  2(1 - p) \big(f_{p,t} - y_{t}\big), & \text{if $y_{t} < f_{p,t}$}\\
+  2p \big(y_{t} - f_{p,t}\big), & \text{if $y_{t} \ge f_{p,t}$} \end{cases}
+\end{block}
+
+### Continuous Ranked Probability Score (CRPS)
+
+$$\large \text{CRPS} = \text{mean}(p_j),$$ 
+
+where
+
+$$p_j = \int_{-\infty}^{\infty} \left(G_j(x) - F_j(x)\right)^2dx,$$
+
+
+
+```{r crps, out.width='60%'}
+knitr::include_graphics("figs/crps.jpg")
+```
+
+
